Fixed navbar z-index and spoiler icons

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 9;
 }
        
 #nav-icon1 {
