--- a/styles/spoiler.css
+++ b/styles/spoiler.css
@@ -21,10 +21,11 @@
   background-repeat: no-repeat;
   position: relative;
   right: 12px;
+  transition: 0.25s ease-in-out;
 }
 
-.spoiler_opened .spoiler_icon {
-  background-image: url('../assets/spoiler-icon-open.png');
+.spoiler__opened .spoiler__icon {
+  transform: rotate(45deg);
 }
 
 .spoiler__left-side {
